# algo-solutions

./: .gitignore  CMakeLists.txt  README.md  babel.config.json  jest.config.cjs  makefile  metadata.json  package-lock.json  package.json  requirements.txt
problems/arrays/apartment_hunting/: README.md
problems/arrays/calendar_matching/: README.md
problems/arrays/count_squares/: README.md
problems/arrays/four_number_sum/: README.md
problems/arrays/line_through_points/: README.md
problems/arrays/min_rewards/: README.md
problems/arrays/sorted_squared_array/: README.md
problems/arrays/subarray_sort/: README.md
problems/arrays/tournament_winner/: README.md
problems/arrays/two_number_sum/: README.md
problems/arrays/validate_subsequence/: README.md
problems/arrays/zigzag_traverse/: README.md
problems/binary_search_trees/assets/: BST.h  BST.js  BST.py
problems/binary_search_trees/repair_bst/: README.md
problems/binary_search_trees/right_smaller_than/: README.md
problems/binary_search_trees/same_bsts/: README.md
problems/binary_search_trees/validate_three_nodes/: README.md
problems/binary_trees/all_kinds_of_node_depths/: README.md
problems/binary_trees/assets/: BinaryTree.h
problems/binary_trees/compare_leaf_traversal/: README.md
problems/binary_trees/find_nodes_distance_k/: README.md
problems/binary_trees/flatten_binary_tree/: README.md
problems/binary_trees/max_path_sum_in_bt/: README.md
problems/binary_trees/right_sibling_tree/: README.md
problems/dynamic_programming/knapsack_problem/: README.md
problems/dynamic_programming/longest_increasing_subsequence/: README.md
problems/dynamic_programming/max_profit_with_k_transactions/: README.md
problems/dynamic_programming/maximum_sum_submatrix/: README.md
problems/graphs/boggle_board/: README.md
scripts/: update_readme.py
tests/cpp/: CMakeLists.txt  jsontestbase.h
tests/cpp/arrays/: CMakeLists.txt  test_apartment_hunting.cpp  test_calendar_matching.cpp  test_count_squares.cpp  test_four_number_sum.cpp  test_line_through_points.cpp  test_min_rewards.cpp  test_subarray_sort.cpp  test_tournament_winner.cpp  test_zigzag_traverse.cpp
tests/cpp/binary_search_trees/: CMakeLists.txt  test_repair_bst.cpp  test_right_smaller_than.cpp  test_same_bsts.cpp  test_validate_three_nodes.cpp  utility.h
tests/cpp/binary_trees/: CMakeLists.txt  test_all_kinds_of_node_depths.cpp  test_compare_leaf_traversal.cpp  test_find_nodes_distance_k.cpp  test_flatten_binary_tree.cpp  test_max_path_sum_in_bt.cpp  test_right_sibling_tree.cpp  utility.h
tests/cpp/dynamic_programming/: CMakeLists.txt  test_knapsack_problem.cpp  test_longest_increasing_subsequence.cpp  test_max_profit_with_k_transactions.cpp  test_maximum_sum_submatrix.cpp
tests/cpp/famous_algorithms/: CMakeLists.txt  test_astar_algorithm.cpp  test_dijkstras_algorithm.cpp  test_kadanes_algorithm.cpp  test_kruskals_algorithm.cpp  test_prims_algorithm.cpp  test_topological_sort.cpp
tests/cpp/graphs/: CMakeLists.txt  test_airport_connections.cpp  test_boggle_board.cpp  test_cycle_in_graph.cpp  test_detect_arbitrage.cpp  test_minimum_passes_of_matrix.cpp  test_youngest_common_ancestor.cpp
tests/cpp/greedy_algorithms/: CMakeLists.txt  test_class_photos.cpp  test_minimum_waiting_time.cpp  test_optimal_freelancing.cpp  test_tandem_bicycle.cpp  test_task_assignment.cpp  test_valid_starting_city.cpp
tests/python/: conftest.py  test_runner.py  utility.py
visualization/: utility.py  visualization_runner.py
visualization/binary_search_trees/: visualize_repair_bst.py
visualization/famous_algorithms/: visualize_astar_algorithm.py  visualize_dijkstra_algorithm.py  visualize_kruskal_algorithm.py  visualize_prims_algorithm.py  visualize_topological_sort.py
visualization/graphs/: visualize_airports_connections.py  visualize_boggle_board.py
(+323 files in other folders)
